[package]
name = "workflow-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
hexplay = "0.2.1"
wasm-bindgen = { version = "0.2.79" }
console = "0.15.0"

[target.'cfg(target_arch = "bpf")'.dependencies]
solana-program = {path = "../solana/sdk/program"}
