[package]
name = "workflow-log"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-log"
keywords = ["wasm","framework","log","logger","bpf"]
categories = []
exclude = ["/.*", "/test"]
description = """
Log macros & utilities abstracting native & in-browser logging interfaces
"""

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["sink"]
full = ["external-logger","sink"]
sink = []
# ignored for BPF target
external-logger = []

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
hexplay = "0.2.1"
wasm-bindgen = { version = "0.2.79" }
console = "0.15.0"
log = "0.4.17"
lazy_static = "1.4.0"
downcast = "0.11.0"

[target.'cfg(target_arch = "bpf")'.dependencies]
solana-program = {path = "../solana/sdk/program"}
